fixed homepage text on tablet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -215,6 +215,51 @@ nav .brand-logo {
   }
 }
 
+@media only screen and (min-width: 451px) and (max-width: 800px) {
+  .home-hero-text {
+    line-height: 45px;
+    padding: 0 12px;
+    font-size: 2.6rem;
+  }
+
+  .body-headlines {
+    font-size: 2.05rem;
+  }
+
+  .body-copy {
+    font-size: 1.25rem;
+  }
+
+  .services-divider {
+    padding: 0 57px;
+  }
+
+  #pricing-header {
+    margin-top: 25px !important;
+    margin-bottom: 25px !important;
+  }
+
+  .service-icons {
+    font-size: 4rem !important;
+  }
+
+  .offer-icons {
+    font-size: 2rem;
+  }
+
+  .package-title {
+    font-size: 2.25rem;
+  }
+
+  footer h6 {
+    font-size: 1.5rem;
+  }
+  
+  footer .fa {
+    font-size: 3rem;
+  }
+}
+
 @media only screen and (max-width: 450px) {
   .home-hero-text {
     line-height: 45px;
